Prevent the content from overflowing its containing box.
Props to Karen
http://themehybrid.com/support/topic/page-content-runs-past-normal-width

--- a/style.css
+++ b/style.css
@@ -1601,6 +1601,7 @@ body.page-template-template-front-page #main,
   padding-bottom: 25px;
   border-bottom: 4px double #eeeeee;
   margin-bottom: 25px;
+  word-wrap: break-word;
 }
 .singular .hentry {
   padding-bottom: 0;
