--- a/style.dev.less
+++ b/style.dev.less
@@ -555,6 +555,7 @@ sub {
 	padding-bottom: @smallGutterWidth;
 	border-bottom: 4px double @grayLighter;
 	margin-bottom: @smallGutterWidth;
+	word-wrap: break-word;
 }
 
 .singular .hentry {
